# TrucCompression

./: .gitignore  CONTRIBUTING.md  README.md  fix_5.py  pyproject.toml  solution.md
.github/workflows/: ci.yml  pages.yml
docs/: BOUNTY.md  app.js  index.html  mfc.js  mini-encode.html  mini.js  styles.css
docs/diagrams/: mfc-layout.html
scripts/: create-bounties.mjs
src/truccompression/: __init__.py  cli.py  codec.py
tests/: test_cli.py  test_codec.py  test_fixtures.py  test_json_report.py  test_rle.py
